(library
 (name keyval_functional_test)
 (public_name twirpc-tests.keyval-functional-test)
 (inline_tests
  (deps keyval.exe))
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Letfun
  -open
  Expect_test_helpers_base)
 (libraries
  base
  expect_test_helpers_core.expect_test_helpers_base
  keyval
  keyval_rpc
  letfun
  twirpc_client
  twirpc_test_helpers)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps
   -unused-type-warnings=force
   ppx_compare
   ppx_enumerate
   ppx_expect
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))

(rule
 (copy ../bin/main.exe keyval.exe))
