(library
 (name twirpc_discovery)
 (public_name twirpc.twirpc-discovery)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Fpath_sexp0
  -open
  Stdio
  -open
  Cmdlang)
 (libraries base cmdlang fpath fpath-sexp0 sexplib0 stdio unix yojson)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps -unused-code-warnings=force ppx_compare ppx_sexp_conv ppx_yojson_conv)))
