(library
 (name twirpc_server)
 (public_name twirpc.twirpc-server)
 (flags :standard -w +a-4-40-41-42-44-45-48-66 -warn-error +a)
 (libraries pbrt_services tiny_httpd twirp_tiny_httpd twirpc_spec)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess no_preprocessing))
