(library
 (name keyval_cli)
 (public_name twirpc-tests.keyval-cli)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Stdio
  -open
  Or_error.Let_syntax
  -open
  Cmdlang)
 (libraries
  base
  cmdlang
  fmt
  keyval
  keyval_rpc
  keyval_server
  stdio
  tiny_httpd
  twirpc_client
  twirpc_discovery
  twirpc_server
  unix)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps
   -unused-type-warnings=force
   ppx_compare
   ppx_enumerate
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))
