(library
 (name keyval_rpc)
 (public_name twirpc-tests.keyval-rpc)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Base_quickcheck)
 (libraries base base_quickcheck twirpc_spec keyval keyval_rpc_proto parsexp)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps
   -unused-type-warnings=force
   ppx_compare
   ppx_enumerate
   ppx_hash
   ppx_here
   ppx_let
   base_quickcheck.ppx_quickcheck
   ppx_sexp_conv
   ppx_sexp_value)))
